Added a function that takes the current filter paramters and returns an array of the matching tutors

--- a/public/search.html
+++ b/public/search.html
@@ -41,23 +41,23 @@
 				<hr />
 				Subject:
 				<select id = "selectSubj" name = "selectSubj" onchange = "populate(this.id, 'selectCourse')" >
-					<option> Select subject</option>
+					<option>Select subject</option>
 					<option value = "Math">Math</option>
 					<option value = "Computer Science">Computer Science</option>
 					<option value = "English">English</option>
 					<option value = "Physics">Physics</option>
 				</select>
-				<hr >
+				<hr>
 				Course Name:
 				<select id = "selectCourse" name = "selectCourse">
 				</select> 
-				<hr >
-				<button type="button">Search for Tutors</button>
+				<hr>
+				<button type="button" onclick="pullTutorArray()">Search for Tutors</button>
 			</div>	
 			<div class="search-selection">
-				<hr />
+				<hr/>
 				<h3>Top Choices</h3>
-				<hr />
+				<hr/>
 				<a href="">Tutor1</a><br>
 				<a href="">Tutor2</a><br>
 				<a href="">Tutor3</a><br>
