Function to display available time

--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -52,11 +52,24 @@
 
 			<label>Subject</label>
             <div id="subjectDiv"></div>
+			<br>
+			
+			<label>Available Time</label>
+			<div id="btns">
+					
+			</div>
+			
+			<!-- <button type="button" id="availTimeButton" onclick="callAarry()"></button> -->
             <br>
 		</div>
+<script>
+$(function(){
+console.log(1);
+	displayAvailableTime("szhan135@ucr.edu");
 
+});
 
-		
+</script>		
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
