finished displayTutorProfile function

--- a/public/search.html
+++ b/public/search.html
@@ -51,19 +51,24 @@
 				Course Name:
 				<select id = "selectCourse" name = "selectCourse">
 				</select> 
-				<hr >
+				<br >
 				<button type="button">Search for Tutors</button>
 			</div>	
 			<div class="search-selection">
 				<hr />
 				<h3>Top Choices</h3>
 				<hr />
-				<a href="">Tutor1</a><br>
+				<!-- <a href="">Tutor1</a><br>
 				<a href="">Tutor2</a><br>
 				<a href="">Tutor3</a><br>
 				<a href="">Tutor4</a><br>
-				<a href="">Tutor5</a><br>
-				
+				<a href="">Tutor5</a><br> -->
+				<!-- <button type = "button" id="test" value=tutorEmail onclick="displayTutorProfile(document.getElementById(test))">Tutor Name 1</button> -->
+				<button id="tutor1" onClick="gotoNode(\'' + result.name + '\')">Tutor Name 1</button>
+				<hr />
+				<button id="tutor2" onClick="displayTutorProfile(tinghuigz10@gmail.com)">Tutor Name 2</button>i
+				<hr />
+				<button id="tutor3" onClick="displayTutorProfile(tinghuigz10@gmail.com)">Tutor Name 3</button>
 			</div>
 		</div>
 
