--- a/public/search.html
+++ b/public/search.html
@@ -58,17 +58,11 @@
 				<hr />
 				<h3>Top Choices</h3>
 				<hr />
-				<!-- <a href="">Tutor1</a><br>
+				<a href="">Tutor1</a><br>
 				<a href="">Tutor2</a><br>
 				<a href="">Tutor3</a><br>
 				<a href="">Tutor4</a><br>
-				<a href="">Tutor5</a><br> -->
-				<!-- <button type = "button" id="test" value=tutorEmail onclick="displayTutorProfile(document.getElementById(test))">Tutor Name 1</button> -->
-				<button id="tutor1" onClick="gotoNode(\'' + result.name + '\')">Tutor Name 1</button>
-				<hr />
-				<button id="tutor2" onClick="displayTutorProfile(tinghuigz10@gmail.com)">Tutor Name 2</button>i
-				<hr />
-				<button id="tutor3" onClick="displayTutorProfile(tinghuigz10@gmail.com)">Tutor Name 3</button>
+				<a href="">Tutor5</a><br>
 			</div>
 		</div>
 
