--- a/public/search.html
+++ b/public/search.html
@@ -52,11 +52,14 @@
 				<select id = "selectCourse" name = "selectCourse">
 				</select> 
 				<hr>
-				<button type="button" onclick="pullTutorArray()">Search for Tutors</button>
+				<button type="button" onclick="displayPossibleTutors()">Search for Tutors</button>
 			</div>	
 			<div class="search-selection">
 				<hr/>
-				<h3>Top Choices</h3>	
+				<h3>Top Choices</h3>
+				<div id="searchSel">
+
+				</div>	
 			</div>
 		</div>
 
