Fixed requests made in github

--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -55,21 +55,20 @@
 			<br>
 			
 			<label>Available Time</label>
-			<div id="btns">
-					
-			</div>
+			<div id="btns"></div>
+			<br>
 			
 			<!-- <button type="button" id="availTimeButton" onclick="callAarry()"></button> -->
-            <br>
 		</div>
-<script>
-$(function(){
-console.log(1);
-	displayAvailableTime("szhan135@ucr.edu");
 
-});
+		<!-- Testing displaying the tutor's available time -->
+		<!-- <script>
+		$(function(){
+			displayAvailableTime("szhan135@ucr.edu");
 
-</script>		
+		});
+
+		</script> -->
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
