Siyi/fix display avail time (#53)
* Function to display available time

* Fixed requests made in github

--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -52,11 +52,23 @@
 
 			<label>Subject</label>
             <div id="subjectDiv"></div>
-            <br>
+			<br>
+			
+			<label>Available Time</label>
+			<div id="btns"></div>
+			<br>
+			
+			<!-- <button type="button" id="availTimeButton" onclick="callAarry()"></button> -->
 		</div>
 
+		<!-- Testing displaying the tutor's available time -->
+		<!-- <script>
+		$(function(){
+			displayAvailableTime("szhan135@ucr.edu");
 
-		
+		});
+
+		</script> -->
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
