Function is working now! still needs few css/html changes for proper integration

--- a/public/profile.html
+++ b/public/profile.html
@@ -60,9 +60,11 @@
 			<label>Account Type</label>
             <div id="isTutorDiv"></div>
             <br>
-
-			<label>Subjects Knowledgeable in</label>
-            <div id="subjectDiv"></div>
+			
+			<div id="removeSubj">
+				<label>Subjects Knowledgeable in</label>
+				<div id="subjectDiv"></div>
+			</div>
             <br>
 		</div>
 
