added function to hide 'subjects able to tutor' tab on students profile

--- a/public/search.html
+++ b/public/search.html
@@ -57,7 +57,7 @@
 			<div class="search-selection">
 				<hr/>
 				<h3>Top Choices</h3>
-				<div id="searchSel">
+				<div id="searchSel" class="search-button">
 
 				</div>	
 			</div>
