--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -62,13 +62,13 @@
 		</div>
 
 		<!-- Testing displaying the tutor's available time -->
-		<!-- <script>
+		<script>
 		$(function(){
 			displayAvailableTime("szhan135@ucr.edu");
 
 		});
 
-		</script> -->
+		</script>
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
