create Time Chosen Arr

--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -55,8 +55,8 @@
             <br>
 		</div>
 
-		<div>
-				<button type="button" onclick="pushTimeToFirebase()">Time1</button>
+		<div style="text-align: center">
+				<button type="button" onclick="creaTimeChosenArray('sun')">Aug 1st 11Am</button>
 		</div>
 
 		
