--- a/public/profile.html
+++ b/public/profile.html
@@ -61,8 +61,16 @@
             <div id="isTutorDiv"></div>
             <br>
 
-			<label>Subjects Knowledgeable in</label>
+			<label>Subjects Knowledgeable In</label>
             <div id="subjectDiv"></div>
+            <br>
+            
+            <label>Available Times</label>
+            <div id="availTimeDiv"></div>
+            <br>
+            
+            <label>Requests For Tutoring</label>
+            <div id="requestsDiv"></div>
 			<br>
 
 		</div>
