Sahil patel/tutortimes (#58)
* added more to function, not done yet

* Function is working now! still needs few css/html changes for proper integration

* added function to hide 'subjects able to tutor' tab on students profile

* fixed css error incase that caused this fatal error

* javascript styling

--- a/public/search.html
+++ b/public/search.html
@@ -53,11 +53,14 @@
 				</select> 
 
 				<hr>
-				<button type="button" onclick="pullTutorArray()">Search for Tutors</button>
+				<button type="button" onclick="displayPossibleTutors()">Search for Tutors</button>
 			</div>	
 			<div class="search-selection">
 				<hr/>
-				<h3>Top Choices</h3>	
+				<h3>Top Choices</h3>
+				<div id="searchSel" class="search-button">
+
+				</div>	
 			</div>
 		</div>
 
