Add function that store the request tutor's profile and student's email name into array and then push to firebase

--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -57,18 +57,21 @@
 			<label>Available Time</label>
 			<div id="btns"></div>
 			<br>
+
 			
-			<!-- <button type="button" id="availTimeButton" onclick="callAarry()"></button> -->
+			
+			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray()"></button>
 		</div>
 
 		<!-- Testing displaying the tutor's available time -->
-		<!-- <script>
+		<script>
 		$(function(){
-			displayAvailableTime("szhan135@ucr.edu");
-
+			//displayAvailableTime("szhan135@ucr.edu");
+		
+		//	creaTimeChosenArray("das");
 		});
 
-		</script> -->
+		</script> 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
