added onclick and passed availTime into MakeAppointment(), added display request button accept and reject button

--- a/public/profile.html
+++ b/public/profile.html
@@ -64,10 +64,19 @@
 			<label>Subjects Knowledgeable in</label>
             <div id="subjectDiv"></div>
 			<br>
+			
+			<h3>request</h3>
+<table id="requestList">
+	
+</table>
 
 		</div>
 
-
+		<script>
+				$(function(){				
+					 DisplayButtonsAccept("u");				
+				})
+				</script>
 		
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
