added onclick and passed availTime into MakeAppointment(), added display request button accept and reject button

--- a/public/profile.html
+++ b/public/profile.html
@@ -66,17 +66,17 @@
 			<br>
 			
 			<h3>request</h3>
-<table id="requestList">
-	
-</table>
+			<table id="requestList">
+				</table>
 
 		</div>
-
+		
+		<!-- //testing for display the request
 		<script>
 				$(function(){				
 					 DisplayButtonsAccept("u");				
 				})
-				</script>
+		</script> -->
 		
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
