--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -55,7 +55,7 @@
 			<br>
 			
 			<label>Available Time</label>
-			<div id="availTumeButtons"></div>
+			<div id="availTimeButtons"></div>
 			<br>
 			
 			<!-- <button type="button" id="availTimeButton" onclick="callAarry()"></button> -->
