Siyi/change display avail time (#61)
* change on displayAvailableTime

* added onclick and passed availTime into MakeAppointment(), added display request button accept and reject button

* added onclick and passed availTime into MakeAppointment(), added display request button accept and reject button

--- a/public/profile.html
+++ b/public/profile.html
@@ -60,6 +60,7 @@
 			<label>Account Type</label>
             <div id="isTutorDiv"></div>
             <br>
+
 			
 			<div id="removeSubj">
 				<label>Subjects Knowledgeable in</label>
@@ -74,11 +75,19 @@
 				<label>Requests For Tutoring</label>
 				<div id="requestsDiv"></div>
 				<br>
+        
+       <h3>request</h3>
+			<table id="requestList">
+				</table>
 			</div>
-
 		</div>
-
-
+		
+		<!-- //testing for display the request
+		<script>
+				$(function(){				
+					 DisplayButtonsAccept("u");				
+				})
+		</script> -->
 		
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
