--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -55,7 +55,7 @@
 			<br>
 			
 			<label>Available Time</label>
-			<div id="btns"></div>
+			<div id="availTimeButtons"></div>
 			<br>
 			
 			<!-- <button type="button" id="availTimeButton" onclick="callAarry()"></button> -->
@@ -63,12 +63,13 @@
 
 		<!-- Testing displaying the tutor's available time -->
 		<!-- <script>
-		$(function(){
-			displayAvailableTime("szhan135@ucr.edu");
+		// $(function(){
+		// 	// displayAvailableTime("szhan135@ucr.edu");
+		
+		// 	pushAvailTimeToFirestore("Aug 17 Thurs, 7pm");
+		// });
 
-		});
-
-		</script> -->
+		// </script> -->
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
