--- a/public/profile.html
+++ b/public/profile.html
@@ -72,7 +72,19 @@
             <br>
             
             <label>Requests For Tutoring</label>
-            <div id="requestsDiv"></div>
+            <div id="requestsDiv">
+
+<table border="1">
+	<tr>
+		<td>name</td>
+		<td>email</td>
+		<td>time</td>
+		<td><input type="button" value="Accept"></td>
+		<td><input type="button" value="Reject"></td>
+	</tr>
+</table>
+
+			</div>
 			<br>
 
 		</div>
