--- a/public/profile.html
+++ b/public/profile.html
@@ -45,15 +45,14 @@
 		</div>
 		<div>
 			<div>
-				<div id="removeSubj">
+				<div id="removeSubj1">
 					<div class="profile-times">
 							<h3>Available Times</h3>
 							<div id="availTimeDiv"></div>
 							<br>
 					</div>
 				</div>
-				<div>
-					<div class="profile-page">
+					<div class="profile-page" id="prof-pg">
 
 						<label>Name</label>
 						<div id="fnameDiv"></div>
@@ -74,7 +73,7 @@
 						<br>
 
 						
-						<div id="removeSubj">
+						<div id="removeSubj2">
 							<label>Subjects Knowledgeable in</label>
 							<div id="subjectDiv"></div>
 							
@@ -90,7 +89,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="removeSubj">
+				<div id="removeSubj3">
 					<div class="profile-requests">
 						<h3>Requested Sessions</h3>
 						<table id="requestList"></table>
