added hide functionality for new public tutor profile page!

--- a/public/index2.html
+++ b/public/index2.html
@@ -36,7 +36,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1><span>A Personalized Local Tutoring Service For Your University!<br />
+					<h1><span>A Personalized Local Tutoring Service For <b>Your</b> University!<br />
 					</span></h1>
 				</div>
 			</section>
