--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -40,7 +40,7 @@
 			<div id="fnameProf"></div>
         </div>
         
-		<div class="profile-page">
+		<div class="profile-page" id="pub-prof-pg">
 
 			<label>Name</label>
             <div id="fnameDiv"></div>
