Add a function that stores the request into an array then push the created request qrray to the tutor's firbase

--- a/public/profile.html
+++ b/public/profile.html
@@ -82,12 +82,12 @@
 			</div>
 		</div>
 		
-		<!-- //testing for display the request
+		//testing for display the request
 		<script>
 				$(function(){				
-					 DisplayButtonsAccept("u");				
+					 DisplayButtonsAccept([{name:"myname",email:"myemail",time:"mytime"}]);				
 				})
-		</script> -->
+		</script>
 		
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
