--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -57,6 +57,9 @@
 			<label>Available Time</label>
 			<div id="availTimeButtons"></div>
 			<br>
+
+			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime1')">myTime1</button>
+			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime2')">myTime2</button>
 			
 			<!-- <button type="button" id="availTimeButton" onclick="callAarry()"></button> -->
 		</div>
