--- a/public/profile.html
+++ b/public/profile.html
@@ -59,9 +59,32 @@
 						<br>
 
 
+
+			<label>Account Type</label>
+            <div id="isTutorDiv"></div>
+            <br>
+			
+			<div id="removeSubj">
+				<label>Subjects Knowledgeable in</label>
+				<div id="subjectDiv"></div>
+			</div>
+            <br>
+            
+            <label>Available Times</label>
+            <div id="availTimeDiv"></div>
+            <br>
+            
+            <label>Requests For Tutoring</label>
+            <div id="requestsDiv">
+
+
+			</div>
+			<br>
+
 						<label>Email</label>
 						<div id="emailDiv"></div>
 						<br>
+
 
 
 						<label>School</label>
