--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -57,8 +57,21 @@
 			<label>Available Time</label>
 			<div id="availTimeButtons"></div>
 			<br>
+			
+			
+			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime1')">rrr</button>
+			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime2')">rrx</button>
 		</div>
 
+		<!-- Testing displaying the tutor's available time -->
+		<script>
+		$(function(){
+			//displayAvailableTime("szhan135@ucr.edu");
+		
+		//	creaTimeChosenArray("das");
+		});
+
+		</script> 
 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
