--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -40,7 +40,7 @@
 			<div id="fnameProf"></div>
         </div>
         
-		<div class="profile-page" id="pub-prof-pg">
+		<div class="profile-page">
 
 			<label>Name</label>
             <div id="fnameDiv"></div>
@@ -55,8 +55,9 @@
 			<br>
 			
 			<label>Available Time</label>
-			<div id="availTimeButtons"></div>
+			<div id="btns"></div>
 			<br>
+
 			
 			
 			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime1')">rrr</button>
@@ -72,12 +73,10 @@
 		});
 
 		</script> 
-
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
 	</body>
-
 </html>
