Fixed profile display and search display (#70)

--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -40,7 +40,7 @@
 			<div id="fnameProf"></div>
         </div>
         
-		<div class="profile-page">
+		<div class="profile-page" id="pub-prof-pg">
 
 			<label>Name</label>
             <div id="fnameDiv"></div>
@@ -65,14 +65,14 @@
 		</div>
 
 		<!-- Testing displaying the tutor's available time -->
-		<script>
+		<!-- <script>
 		$(function(){
 			//displayAvailableTime("szhan135@ucr.edu");
 		
 		//	creaTimeChosenArray("das");
 		});
 
-		</script> 
+		</script>  -->
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
