Made parseURL able to just return the email that way multiple functions can call it (#71)

--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -19,7 +19,7 @@
 
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body onload="initialize(); parseURL();">
+	<body onload="initialize(); listTutorInfo();">
 		<!-- Header -->
         <header id="header">
             <div class="inner">
