Add fixed function which won't let student choose the same time and add delete given request and delete available time from the firestore

--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -1,87 +1,3 @@
-<<<<<<< HEAD
-<!DOCTYPE HTML>
-<!--
-	Introspect by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
-
-
-<html>
-	<head>
-		<title>Profile - A++ Learning</title>
-		<meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-auth.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-firestore.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="./config.js"></script>
-
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body onload="initialize(); parseURL();">
-		<!-- Header -->
-        <header id="header">
-            <div class="inner">
-                <a href="index2.html" class="logo">A++ Learning</a>
-                <nav id="nav">
-                    <a href="index2.html">Home</a>
-                    <a href="profile.html">Profile</a>
-                    <a href="search.html">Search</a>     
-                    <button type="button" onclick="logout()">Logout</button>
-                </nav>
-            </div>
-        </header>
-		<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>      
-
-
-		<!-- Main -->
-		<div class="profile-header">
-			<div id="fnameProf"></div>
-        </div>
-        
-		<div class="profile-page">
-
-			<label>Name</label>
-            <div id="fnameDiv"></div>
-            <br>
-
-			<label>School</label>
-            <div id="schoolDiv"></div>
-            <br>
-
-			<label>Subject</label>
-            <div id="subjectDiv"></div>
-			<br>
-			
-			<label>Available Time</label>
-			<div id="availTimeButtons"></div>
-			<br>
-
-			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime1')">myTime1</button>
-			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime2')">myTime2</button>
-			
-			<!-- <button type="button" id="availTimeButton" onclick="callAarry()"></button> -->
-		</div>
-
-		<!-- Testing displaying the tutor's available time -->
-		<!-- <script>
-		// $(function(){
-		// 	// displayAvailableTime("szhan135@ucr.edu");
-		
-		// 	pushAvailTimeToFirestore("Aug 17 Thurs, 7pm");
-		// });
-
-		// </script> -->
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
-	</body>
-
-=======
 <!DOCTYPE HTML>
 <!--
 	Introspect by TEMPLATED
@@ -144,8 +60,8 @@
 
 			
 			
-			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime1')">rrr</button>
-			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime2')">rrx</button>
+			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime1')">Time1</button>
+			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime2')">Time2</button>
 		</div>
 
 		<!-- Testing displaying the tutor's available time -->
@@ -163,5 +79,4 @@
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
 	</body>
->>>>>>> cdafd9097da632c9ab497b4754916d55209af401
 </html>
