--- a/public/profile.html
+++ b/public/profile.html
@@ -95,20 +95,34 @@
 				<div id="removeSubj3">
 					<div class="profile-requests">
 						<h3>Requested Sessions</h3>
-						<table id="requestList"></table>
+						<div id="requestList">
+							
+							
+						</div>
 					</div>
 				</div>
 			</div>
 			
 			
 		</div>
-		
+		<style>
+		#requestList td{
+			padding: 0.75em 0.05em;
+		}
+		#requestList tr{
+			border: none;
+			text-align: center;
+		}
+		</style>
 		
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
+
+
+	
 	</body>
 
 </html>
