--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -60,8 +60,8 @@
 
 			
 			
-			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime1')">rrr</button>
-			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime2')">rrx</button>
+			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime1')">Time1</button>
+			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime2')">Time2</button>
 		</div>
 
 		<!-- Testing displaying the tutor's available time -->
