successfully displays requests on tutor's profile

--- a/public/profile.html
+++ b/public/profile.html
@@ -95,7 +95,9 @@
 				<div id="removeSubj3">
 					<div class="profile-requests">
 						<h3>Requested Sessions</h3>
-						<table id="requestList"></table>
+						<div id="tut-prof-req" class="tutorProfileRequests">
+
+						</div>
 					</div>
 				</div>
 			</div>
