--- a/public/profile.html
+++ b/public/profile.html
@@ -95,9 +95,7 @@
 				<div id="removeSubj3">
 					<div class="profile-requests">
 						<h3>Requested Sessions</h3>
-						<div id="requestList">
-							
-							
+						<div id="tut-prof-req" class="tutorProfileRequests">
 						</div>
 					</div>
 				</div>
