fixed the error that when availTime has space the onclick function cannot call

--- a/public/profileTutor.html
+++ b/public/profileTutor.html
@@ -55,13 +55,13 @@
 			<br>
 			
 			<label>Available Time</label>
-			<div id="btns"></div>
+			<div id="availTimeButtons"></div>
 			<br>
 
 			
 			
-			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime1')">Time1</button>
-			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime2')">Time2</button>
+			<!-- <button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime1')">Time1</button>
+			<button type="button" id="availTimeButton" onclick="creaTimeChosenArray('myTime2')">Time2</button> -->
 		</div>
 
 		<!-- Testing displaying the tutor's available time -->
