--- a/public/profile.html
+++ b/public/profile.html
@@ -92,6 +92,9 @@
 							
 							<!-- <h3>request</h3>
 							<table id="requestList"></table> -->
+						
+						<label >Reserved Time</label>
+						<div id="isTutorDiv"></div>
 						</div>
 					</div>
 				</div>
