seperated js codes to different files

--- a/public/tutorClasses.html
+++ b/public/tutorClasses.html
@@ -96,6 +96,10 @@
                 <script src="assets/js/skel.min.js"></script>
                 <script src="assets/js/util.js"></script>
                 <script src="assets/js/main.js"></script>
+                <script src="assets/js/register.js"></script>
+                <script src="assets/js/profile.js"></script>
+                <script src="assets/js/profileTutor.js"></script>
+                <script src="assets/js/search.js"></script>
         </div>
     </body>
     
