Tinghui/split files (#95)
* seperated js codes to different files

* rearranged orders of js files based on orders of functions being called

--- a/public/profile.html
+++ b/public/profile.html
@@ -16,6 +16,16 @@
         <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-firestore.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="./config.js"></script>
+				
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/register.js"></script>
+		<script src="assets/js/main.js"></script>
+		<script src="assets/js/profileTutor.js"></script>
+		<script src="assets/js/profile.js"></script>
+		<script src="assets/js/search.js"></script>
 
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
@@ -112,15 +122,6 @@
 			text-align: center;
 		}
 		</style>
-		
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
-
-
-	
 	</body>
 
 </html>
