--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,17 @@
         <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-firestore.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="stylesheet" href="assets/css/main.css" />
-        <script src="./config.js"></script>
+		<script src="./config.js"></script>
+		
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/register.js"></script>
+		<script src="assets/js/main.js"></script>
+		<script src="assets/js/profileTutor.js"></script>
+		<script src="assets/js/profile.js"></script>
+		<script src="assets/js/search.js"></script>
     </head>
     
 	<body onload="initialize()">
@@ -143,14 +153,5 @@
 					</article>
 				</div>
 			</section>
-
-		
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
