add outgoing requests field

--- a/public/profile.html
+++ b/public/profile.html
@@ -95,7 +95,11 @@
 							<br>
                         </div>
 
-                        
+					   
+						<label >Outgoing Requests</label>
+                        <div id="OutgoingRequestsID"></div>
+						<br>
+
                         <label >Reserved Time</label>
                         <div id="ReservedID"></div>
                         <br>
