Add outgoing element and all the function related to this

--- a/public/profile.html
+++ b/public/profile.html
@@ -95,8 +95,7 @@
 							<br>
                         </div>
 
-                        
-                        <label >Reserved Time</label>
+                        <label>Reserved Time</label>
                         <div id="ReservedID"></div>
                         <br>
                         <br>
@@ -104,7 +103,7 @@
 				</div>
 				<div id="removeSubj3">
 					<div class="profile-requests">
-						<h3>Requested Sessions</h3>
+						<h3>Incoming Requests</h3>
 						<div id="tut-prof-req" class="tutorProfileRequests">
 						</div>
 					</div>
