Add outgoing element and all the function related to this (#99)

--- a/public/profile.html
+++ b/public/profile.html
@@ -94,8 +94,6 @@
 							<div id="subjectDiv"></div>
 							<br>
                         </div>
-
-					   
 						<label >Outgoing Requests</label>
                         <div id="OutgoingRequestsID"></div>
 						<br>
@@ -108,7 +106,7 @@
 				</div>
 				<div id="removeSubj3">
 					<div class="profile-requests">
-						<h3>Requested Sessions</h3>
+						<h3>Incoming Requests</h3>
 						<div id="tut-prof-req" class="tutorProfileRequests">
 						</div>
 					</div>
