changed school options during registration to a dropdown

--- a/public/register.html
+++ b/public/register.html
@@ -76,7 +76,11 @@
                     First Name <input type="text" placeholder="First Name" id="fname">
                     Last Name <input type="text" placeholder="Last Name" id="lname">
                     <!-- Email <input type="email" placeholder="Email" id="email"> -->
-                    School Name <input type="text" placeholder="School" id="school">
+                    School Name 
+                    <select id = "school" name = "selectSchool">
+                        <option>University of California, Riverside</option>
+                        <!-- <input type="text" placeholder="School" id="school"> -->
+                    </select>
                     <input type="radio" name="myRadio" value="1" id="student">   Student
                     <br>
                 
