stopped 'tutor only' features from showing quickly on Student profile load-up

--- a/public/profile.html
+++ b/public/profile.html
@@ -55,7 +55,7 @@
 		</div>
 		<div>
 			<div>
-				<div id="removeSubj1">
+				<div id="addSubj1" style="display:none">
 					<div class="profile-times">
 							<h3>Available Times</h3>
 							<div id="availTimeDiv"></div>
@@ -89,7 +89,7 @@
                         <br>
                         
                         
-						<div id="removeSubj2">
+						<div id="addSubj2" style="display:none">
 							<label>Subjects Knowledgeable in</label>
 							<div id="subjectDiv"></div>
 							<br>
@@ -104,7 +104,7 @@
                         <br>
 					</div>
 				</div>
-				<div id="removeSubj3">
+				<div id="addSubj3" style="display:none">
 					<div class="profile-requests">
 						<h3>Incoming Requests</h3>
 						<div id="tut-prof-req" class="tutorProfileRequests">
