--- a/public/index2.html
+++ b/public/index2.html
@@ -109,7 +109,7 @@
 					<article>
 						<div class="content">
 								<div class="personal-pics">
-										<img src="images/pic05.jpg" alt="Avatar" />
+										<img src="images/pic05.JPG" alt="Avatar" />
 								</div>
 							<header>
 								<h3>Sahil Patel</h3>
